web/src/app/shared/components/projects-list/projects-list.component.scss
@import "../../../../assets/scss/mixin.scss";

.project {

  &__list {
    width: 100%;

    img {
      width: 24px; 
    }

    &__title {
      word-break: break-all;

      @media(max-width: $breakpoint-xs) {

        width: 30vw;
      }


    }

    &__actions {
      cursor: pointer;
    }

    &__url {
      max-width: 20vw;

      &__content {
        @include ellipsisText;
        width: 90%;
      }
    }

    &__monitors {
      &__icon {
        padding-top: 6px;
      }
    }
  }
}

